articles, logo, about and some pages config...

--- a/about.html
+++ b/about.html
@@ -115,9 +115,7 @@
             <div class="grid grid-2">
                 <div class="founder-card">
                     <div class="founder-avatar">
-                        <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
-                        </svg>
+                        <img src="images/sener-cem-irmak.jpg" alt="Şener Cem Irmak" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;" />
                     </div>
                     <h3 class="font-lato mb-4">Şener Cem Irmak</h3>
                     <p class="font-libre text-gray-600 mb-6">CEO & Founder</p>
@@ -146,6 +144,113 @@
                             <li>• Sustainable Business Strategy</li>
                         </ul>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Four-Pillar Ecosystem Section -->
+    <section class="section section-white">
+        <div class="container">
+            <div class="text-center mb-8">
+                <p class="font-lato" style="font-size:1.1rem; color:var(--primary-blue); font-weight:600; letter-spacing:0.08em; text-transform:uppercase;">Our Methodology</p>
+                <h2 class="font-lato mb-4" style="font-size:2.1rem; font-weight:800; color:var(--text-gray);">The Four-Pillar Ecosystem</h2>
+                <p class="font-libre mx-auto" style="max-width:700px; color:var(--gray-700); font-size:1.15rem;">Isolated solutions create temporary fixes. Sustainable flourishing requires a systemic approach. Our unique Four-Pillar Ecosystem is the engine of our integrated value creation, ensuring that every facet of our work is interconnected, mutually reinforcing, and aligned with a single purpose.</p>
+            </div>
+            <div class="text-center mb-12">
+                <h3 class="font-lato mb-2" style="font-size:1.5rem; font-weight:700; color:var(--primary-green);">A Virtuous Cycle of Impact</h3>
+                <p class="font-libre mx-auto" style="max-width:600px; color:var(--gray-600); font-size:1.05rem;">Each pillar fuels the others, creating a powerful flywheel that accelerates learning, enhances service delivery, and amplifies our collective impact.</p>
+            </div>
+            <!-- Four Pillar Cards 2x2 Grid -->
+            <div class="grid grid-2" style="gap:2.5rem;">
+                <div class="pillar-card" style="background:#fff; border-radius:1rem; box-shadow:0 2px 16px rgba(37,99,235,0.07); border-top:4px solid var(--primary-green); padding:2rem 1.2rem;">
+                    <h4 class="font-lato" style="color:var(--primary-green); font-size:1.15rem; font-weight:700; margin-bottom:0.7rem;">I. Intellectual Engine</h4>
+                    <p class="font-libre" style="color:var(--gray-700); font-size:1rem;">Our foundation of scientific rigor. We engage in social science research, like our flagship <span style="font-weight:600; color:var(--text-gray);">Lighthouse Project</span>, to generate novel, evidence-based intellectual property. This pillar ensures our solutions are not just best-practice, but next-practice.</p>
+                </div>
+                <div class="pillar-card" style="background:#fff; border-radius:1rem; box-shadow:0 2px 16px rgba(37,99,235,0.07); border-top:4px solid var(--accent-gold); padding:2rem 1.2rem;">
+                    <h4 class="font-lato" style="color:var(--accent-gold); font-size:1.15rem; font-weight:700; margin-bottom:0.7rem;">II. Commercial Engine</h4>
+                    <p class="font-libre" style="color:var(--gray-700); font-size:1rem;">Where we apply our insights to solve real-world business problems. Through B2B well-being and psychological services—including <span style="font-weight:600; color:var(--text-gray);">diagnostics, consulting, coaching, and workshops</span>—we translate theory into tangible organizational and financial value for our clients.</p>
+                </div>
+                <div class="pillar-card" style="background:#fff; border-radius:1rem; box-shadow:0 2px 16px rgba(37,99,235,0.07); border-top:4px solid var(--gray-600); padding:2rem 1.2rem;">
+                    <h4 class="font-lato" style="color:var(--gray-600); font-size:1.15rem; font-weight:700; margin-bottom:0.7rem;">III. Community Flywheel</h4>
+                    <p class="font-libre" style="color:var(--gray-700); font-size:1rem;">Impact is magnified when shared. This pillar focuses on professional education and content, transforming our IP into accessible formats like <span style="font-weight:600; color:var(--text-gray);">webinars, workshops, and The Koru Journal</span>. We build a community of practice, educating the market and creating a flywheel for engagement.</p>
+                </div>
+                <div class="pillar-card" style="background:#fff; border-radius:1rem; box-shadow:0 2px 16px rgba(37,99,235,0.07); border-top:4px solid var(--primary-blue); padding:2rem 1.2rem;">
+                    <h4 class="font-lato" style="color:var(--primary-blue); font-size:1.15rem; font-weight:700; margin-bottom:0.7rem;">IV. Purpose Apex</h4>
+                    <p class="font-libre" style="color:var(--gray-700); font-size:1rem;">Our North Star. We align our work with global goals, specifically the <span style="font-weight:600; color:var(--text-gray);">UN Sustainable Development Goals</span> for Good Health & Well-being (SDG 3) and Decent Work & Economic Growth (SDG 8). This pillar ensures our commercial success contributes to a greater societal purpose.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Guiding Archetype Section -->
+    <section class="section section-white">
+        <div class="container">
+            <div class="text-center mb-8">
+                <h2 class="font-lato mb-4" style="font-size:2rem; font-weight:800; color:var(--text-gray);">Our Guiding Archetype</h2>
+                <p class="font-libre mx-auto" style="max-width:600px; color:var(--gray-600); font-size:1.1rem;">Our identity is our most defensible asset. We embody an integrated archetype that defines our approach and differentiates our impact.</p>
+            </div>
+            <div class="grid grid-3" style="gap:2rem; margin-bottom:2rem;">
+                <div class="card text-center">
+                    <div class="card-icon blue" style="margin-bottom:1.5rem;">
+                        <svg class="h-8 w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
+                        </svg>
+                    </div>
+                    <h3 class="font-lato mb-2" style="font-size:1.4rem; font-weight:700; color:var(--text-gray);">The Sage</h3>
+                    <p class="font-libre" style="color:var(--gray-700); font-size:1rem;">
+                        <strong class="font-bold" style="color:var(--primary-green);">Our evidence-based WHAT.</strong> We are grounded in scientific rigor and deep expertise. Our solutions are born from validated research in social science and organizational psychology, ensuring they are not just intuitive, but effective.
+                    </p>
+                </div>
+                <div class="card text-center">
+                    <div class="card-icon green" style="margin-bottom:1.5rem;">
+                        <svg class="h-8 w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+                        </svg>
+                    </div>
+                    <h3 class="font-lato mb-2" style="font-size:1.4rem; font-weight:700; color:var(--text-gray);">The Caregiver</h3>
+                    <p class="font-libre" style="color:var(--gray-700); font-size:1rem;">
+                        <strong class="font-bold" style="color:var(--primary-blue);">Our empathetic HOW.</strong> We believe that true transformation requires understanding the human system. We approach every challenge with systemic empathy, creating the psychological safety necessary for genuine growth and connection.
+                    </p>
+                </div>
+                <div class="card text-center">
+                    <div class="card-icon gold" style="margin-bottom:1.5rem;">
+                        <svg class="h-8 w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27z" />
+                        </svg>
+                    </div>
+                    <h3 class="font-lato mb-2" style="font-size:1.4rem; font-weight:700; color:var(--text-gray);">The Hero</h3>
+                    <p class="font-libre" style="color:var(--gray-700); font-size:1rem;">
+                        <strong class="font-bold" style="color:var(--gray-800);">Our impactful WHY.</strong> We are not passive advisors. We are active catalysts who empower our clients to overcome challenges and achieve extraordinary outcomes. We provide the frameworks and courage to build more resilient, high-performing organizations.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Core Values Section -->
+    <section class="section section-white">
+        <div class="container">
+            <div class="text-center mb-8">
+                <h2 class="font-lato mb-4" style="font-size:2rem; font-weight:800; color:var(--text-gray);">Our Core Values</h2>
+                <p class="font-libre mx-auto" style="max-width:600px; color:var(--gray-600); font-size:1.1rem;">These four principles are the pillars of our practice. They guide our actions, shape our culture, and ensure the integrity of our work.</p>
+            </div>
+            <div class="grid grid-2" style="gap:2rem;">
+                <div class="card" style="border:1px solid var(--gray-200);">
+                    <h4 class="font-lato mb-2" style="font-size:1.2rem; font-weight:700; color:var(--primary-blue);">Evidence-Based Rigor</h4>
+                    <p class="font-libre" style="color:var(--gray-700); font-size:1rem;">We build our solutions on a foundation of science. Every recommendation, framework, and intervention is rooted in validated research and data, ensuring that our impact is both meaningful and measurable. We replace guesswork with evidence.</p>
+                </div>
+                <div class="card" style="border:1px solid var(--gray-200);">
+                    <h4 class="font-lato mb-2" style="font-size:1.2rem; font-weight:700; color:var(--primary-blue);">Systemic Empathy</h4>
+                    <p class="font-libre" style="color:var(--gray-700); font-size:1rem;">We look beyond individuals to understand the complex interplay of relationships, culture, and structure within an organization. Our approach is to understand the whole system, fostering connection and addressing root causes, not just symptoms.</p>
+                </div>
+                <div class="card" style="border:1px solid var(--gray-200);">
+                    <h4 class="font-lato mb-2" style="font-size:1.2rem; font-weight:700; color:var(--primary-blue);">Purpose-Driven Impact</h4>
+                    <p class="font-libre" style="color:var(--gray-700); font-size:1rem;">Our work is aligned with a greater purpose—contributing to the UN Sustainable Development Goals and fostering a world where both people and businesses thrive. We measure success not just by profit, but by positive, lasting impact on society.</p>
+                </div>
+                <div class="card" style="border:1px solid var(--gray-200);">
+                    <h4 class="font-lato mb-2" style="font-size:1.2rem; font-weight:700; color:var(--primary-blue);">Integrated Synergy</h4>
+                    <p class="font-libre" style="color:var(--gray-700); font-size:1rem;">We believe the greatest value lies at the intersection of disciplines. Our Four-Pillar Ecosystem—Research, Commercial Services, Education, and Social Impact—creates a virtuous cycle where each part strengthens the others, delivering unparalleled value to our clients.</p>
                 </div>
             </div>
         </div>
