--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                 <!-- Contact Form -->
                 <div class="contact-form">
                     <h2 class="font-lato">Send Us a Message</h2>
-                    <form id="contact-form">
+                    <form id="contact-form" action="https://formspree.io/f/mnqekgqv" method="POST">
                         <div class="grid grid-2">
                             <div class="form-group">
                                 <label for="firstName">First Name *</label>
@@ -100,7 +100,7 @@
                             </div>
                             <div class="contact-details">
                                 <h3>Email</h3>
-                                <a href="mailto:info@koruimpact.org">info@koruimpact.org</a>
+                                <a href="mailto:info@koruimpact.org" style="color:#2563EB; text-decoration:underline;">info@koruimpact.org</a>
                                 <p class="small">We typically respond within 24 hours</p>
                                 <p class="small">Based in Turkey, serving organizations globally</p>
                             </div>
