--- a/services.html
+++ b/services.html
@@ -257,10 +257,10 @@
     <section class="section section-cta">
         <div class="container">
             <div class="section-content text-center">
-                <h2 class="font-lato mb-4">Ready to Transform Your Organization?</h2>
-                <p class="font-libre mb-8 max-w-2xl mx-auto">Let's discuss how our integrated four-pillar approach can help your organization achieve sustainable growth and positive impact.</p>
+                <h2 class="font-lato mb-4">Ready to Grow with Koru Impact?</h2>
+                <p class="font-libre mb-8 max-w-2xl mx-auto">Discover how our integrated four-pillar approach can help your organization achieve sustainable growth and positive impact.</p>
                 <div class="hero-buttons">
-                    <a href="contact.html" class="btn btn-dark">Start Your Journey</a>
+                    <a href="contact.html" class="btn btn-dark">Contact Us</a>
                     <a href="about.html" class="btn btn-secondary">Learn More About Us</a>
                 </div>
             </div>
