articles and some config.

--- a/journal.html
+++ b/journal.html
@@ -49,8 +49,8 @@
                             <h2 class="font-lato" style="font-size:1.7rem; color:var(--primary-blue); margin-bottom:0.7rem;">The Leader's Role in Preventing Burnout</h2>
                             <p class="font-libre" style="color:var(--gray-700); font-size:1.08rem; margin-bottom:1.2rem;">Explore the systemic factors of burnout and discover actionable strategies for leaders to build more resilient teams.</p>
                             <div style="display:flex; align-items:center; gap:0.75rem; margin-bottom:1.2rem;">
-                                <img src="images/sener-cem-irmak.jpg" alt="Şener Cem Irmak" style="width:2.2rem; height:2.2rem; border-radius:50%; object-fit:cover;">
-                                <span class="font-lato" style="font-weight:600; color:var(--text-gray); font-size:0.98rem;">Şener Cem Irmak</span>
+                                <img src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'><circle cx='24' cy='24' r='24' fill='%23E5E7EB'/><circle cx='24' cy='20' r='8' fill='%239CA3AF'/><ellipse cx='24' cy='36' rx='12' ry='8' fill='%23D1D5DB'/></svg>" alt="Anonymous" style="width:2.2rem; height:2.2rem; border-radius:50%; object-fit:cover;">
+                                <span class="font-lato" style="font-weight:600; color:var(--text-gray); font-size:0.98rem;">Ekin Kaya</span>
                                 <span class="font-libre" style="color:var(--gray-500); font-size:0.95rem;">June 12, 2025</span>
                             </div>
                             <a href="articles/article-2.html" class="btn btn-dark" style="align-self:flex-start;">Read the Article</a>
@@ -63,8 +63,8 @@
                             <h2 class="font-lato" style="font-size:1.7rem; color:var(--primary-blue); margin-bottom:0.7rem;">Beyond Pizza Parties: What Actually Builds Team Cohesion?</h2>
                             <p class="font-libre" style="color:var(--gray-700); font-size:1.08rem; margin-bottom:1.2rem;">Drawing from clinical psychology and organizational behavior, we dissect the myths of team building and present a framework for fostering genuine connection.</p>
                             <div style="display:flex; align-items:center; gap:0.75rem; margin-bottom:1.2rem;">
-                                <img src="images/sener-cem-irmak.jpg" alt="Şener Cem Irmak" style="width:2.2rem; height:2.2rem; border-radius:50%; object-fit:cover;">
-                                <span class="font-lato" style="font-weight:600; color:var(--text-gray); font-size:0.98rem;">Şener Cem Irmak</span>
+                                <img src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'><circle cx='24' cy='24' r='24' fill='%23E5E7EB'/><circle cx='24' cy='20' r='8' fill='%239CA3AF'/><ellipse cx='24' cy='36' rx='12' ry='8' fill='%23D1D5DB'/></svg>" alt="Anonymous" style="width:2.2rem; height:2.2rem; border-radius:50%; object-fit:cover;">
+                                <span class="font-lato" style="font-weight:600; color:var(--text-gray); font-size:0.98rem;">Khadija Demir</span>
                                 <span class="font-libre" style="color:var(--gray-500); font-size:0.95rem;">May 20, 2025</span>
                             </div>
                             <a href="articles/article-3.html" class="btn btn-dark" style="align-self:flex-start;">Read the Article</a>
