--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <meta property="og:url" content="https://koruimpact.com/about">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/logo-icon.ico">
 </head>
 <body>
     <!-- Header Component -->
