--- a/journal.html
+++ b/journal.html
@@ -9,7 +9,8 @@
     <meta name="description" content="The Koru Journal - Insights and articles from Koru Impact.">
     <meta name="keywords" content="Koru Journal, articles, insights, koru impact">
     <meta name="author" content="Koru Impact">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <!-- Favicon -->
+        <link rel="icon" type="image/x-icon" href="images/logo-icon.ico">
 </head>
 <body>
     <div id="header-placeholder"></div>
